Canada150: Fixed scrollbar visual bug on iOS.

--- a/wordpress/wp-content/themes/reverie-master/scss/app.scss
+++ b/wordpress/wp-content/themes/reverie-master/scss/app.scss
@@ -82,6 +82,16 @@ a:focus {
     color: $darkgoldlink;
 }
 
+@media screen and (max-width: 39.9375em) {
+  body {
+    -ms-overflow-style: none;
+    overflow: -moz-scrollbars-none;
+    ::-webkit-scrollbar {
+      width: 0 !important;
+    }
+  }
+}
+
 //@import "style.scss";  original reverie stylesheet, no longer necessary
 @import "fonts";
 
