--- a/wordpress/wp-content/themes/reverie-master/scss/partials/canada150/index.scss
+++ b/wordpress/wp-content/themes/reverie-master/scss/partials/canada150/index.scss
@@ -1,4 +1,9 @@
 #canada150 {
+    -ms-overflow-style: none;  // IE 10+
+    overflow: -moz-scrollbars-none;  // Firefox
+	::-webkit-scrollbar {
+	    display: none;  // Safari and Chrome
+	}
 	.article-mondrian-c {
 		cursor: initial;
 	}
